# agimus_pytroller

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  controller_plugins.xml  package.xml
agimus_pytroller_py/: agimus_pytroller_base.py  agimus_pytroller_impl.py
include/agimus_pytroller/: agimus_pytroller.hpp  visibility.hpp
src/: agimus_pytroller.cpp  agimus_pytroller_parameters.yaml
